# rust-uuid-play

./: Cargo.toml
src/: main.rs
