[package]
name = "uuid-play"
version = "0.1.0"
authors = ["Marco De Nittis <marco.denittis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid= { version = "0.8.2", features=["v4"]}
base64= { version = "0.13.0" }
nanoid="0.4.0"

[profile.release]
opt-level = 3